--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css"/>
     <title>Super Procrastinator</title>
 </head>
 <body>
